--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=/" />
-  </head>
-  <body>
-    <p>If you are not redirected, <a href="/">click here</a> to go to the homepage.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="0; url=/" />
+  <title>Page Not Found</title>
+</head>
+<body>
+  <p>Redirecting...</p>
+</body>
 </html>
