--- a/404.html
+++ b/404.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="refresh" content="0; url=/" />
-  <title>Page Not Found</title>
-</head>
-<body>
-  <p>Redirecting...</p>
-</body>
-</html>
+<script type="text/javascript">
+  // Redirect all 404s to index.html
+  var redirectTo = window.location.pathname;
+  if (redirectTo !== '/basketball-junkie-react/') {
+    window.location.href = '/basketball-junkie-react/index.html';
+  }
+</script>
