--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball Junkie</title>
-  <link rel="stylesheet" href="Index.css">
+  <link rel="stylesheet" href="Index.css"> <!-- Use proper styling -->
 </head>
 <body>
-  <div id="root"></div>  <!-- This is where your React app will be mounted -->
-
-  <script src="App.js"></script>  <!-- Assuming you are using Webpack or similar bundler -->
+  <div id="root"></div> <!-- React mounts the app here -->
 </body>
 </html>
