--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Player - Basketball Junkie</title>
   <link rel="stylesheet" href="styles.css"> <!-- Optional: For styling -->
 </head>
@@ -32,6 +34,12 @@
 
     <label for="img">Image:</label>
     <input type="file" id="img" name="img" accept="image/*" /><br>
+    
+    <!-- Image Preview -->
+    <div id="img-preview-container" style="display:none;">
+      <p>Image Preview:</p>
+      <img id="img-preview" src="" alt="Image Preview" style="max-width: 100px; max-height: 100px;"/>
+    </div>
 
     <button type="submit">Submit</button>
   </form>
@@ -44,6 +52,8 @@
       event.preventDefault(); // Prevent the default form submission
 
       const formData = new FormData(this); // Create FormData object with form data
+      const messageDiv = document.getElementById('response-message');
+      messageDiv.style.display = 'none'; // Hide message div initially
 
       try {
         // Send data to server via POST request
@@ -52,21 +62,37 @@
           body: formData,
         });
 
-        const result = await response.json();
-        
-        // Show success or error message
-        const messageDiv = document.getElementById('response-message');
+        // Check if the response is OK
         if (response.ok) {
+          const result = await response.json();
           messageDiv.style.display = 'block';
           messageDiv.innerText = 'Player added successfully!';
           messageDiv.style.color = 'green';
         } else {
+          // Handle non-200 responses
+          const result = await response.text();
           messageDiv.style.display = 'block';
-          messageDiv.innerText = `Error: ${result.error}`;
+          messageDiv.innerText = `Error: ${result}`;
           messageDiv.style.color = 'red';
         }
       } catch (error) {
         console.error('Error submitting the form:', error);
+        messageDiv.style.display = 'block';
+        messageDiv.innerText = 'Unexpected error occurred. Please try again later.';
+        messageDiv.style.color = 'red';
+      }
+    });
+
+    // Image preview functionality
+    document.getElementById('img').addEventListener('change', function() {
+      const file = this.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          document.getElementById('img-preview').src = e.target.result;
+          document.getElementById('img-preview-container').style.display = 'block';
+        };
+        reader.readAsDataURL(file);
       }
     });
   </script>
