--- a/public/index.html
+++ b/public/index.html
@@ -3,98 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add Player - Basketball Junkie</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Optional: For styling -->
+  <title>Basketball Junkie</title>
 </head>
 <body>
-  <h1>Add a Player</h1>
-
-  <!-- Form to input player data and upload an image -->
-  <form id="player-form" enctype="multipart/form-data">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required /><br>
-
-    <label for="team">Team:</label>
-    <input type="text" id="team" name="team" required /><br>
-
-    <label for="points">Points:</label>
-    <input type="number" id="points" name="points" required /><br>
-
-    <label for="assists">Assists:</label>
-    <input type="number" id="assists" name="assists" required /><br>
-
-    <label for="rebounds">Rebounds:</label>
-    <input type="number" id="rebounds" name="rebounds" required /><br>
-
-    <label for="fieldGoalPercentage">Field Goal Percentage:</label>
-    <input type="number" id="fieldGoalPercentage" name="fieldGoalPercentage" required /><br>
-
-    <label for="threePointPercentage">Three Point Percentage:</label>
-    <input type="number" id="threePointPercentage" name="threePointPercentage" required /><br>
-
-    <label for="img">Image:</label>
-    <input type="file" id="img" name="img" accept="image/*" /><br>
-    
-    <!-- Image Preview -->
-    <div id="img-preview-container" style="display:none;">
-      <p>Image Preview:</p>
-      <img id="img-preview" src="" alt="Image Preview" style="max-width: 100px; max-height: 100px;"/>
-    </div>
-
-    <button type="submit">Submit</button>
-  </form>
-
-  <div id="response-message" style="display: none;"></div> <!-- Display success/error message -->
-
-  <script>
-    // Handle form submission
-    document.getElementById('player-form').addEventListener('submit', async function(event) {
-      event.preventDefault(); // Prevent the default form submission
-
-      const formData = new FormData(this); // Create FormData object with form data
-      const messageDiv = document.getElementById('response-message');
-      messageDiv.style.display = 'none'; // Hide message div initially
-
-      try {
-        // Send data to server via POST request
-        const response = await fetch('/api/players', {
-          method: 'POST',
-          body: formData,
-        });
-
-        // Check if the response is OK
-        if (response.ok) {
-          const result = await response.json();
-          messageDiv.style.display = 'block';
-          messageDiv.innerText = 'Player added successfully!';
-          messageDiv.style.color = 'green';
-        } else {
-          // Handle non-200 responses
-          const result = await response.text();
-          messageDiv.style.display = 'block';
-          messageDiv.innerText = `Error: ${result}`;
-          messageDiv.style.color = 'red';
-        }
-      } catch (error) {
-        console.error('Error submitting the form:', error);
-        messageDiv.style.display = 'block';
-        messageDiv.innerText = 'Unexpected error occurred. Please try again later.';
-        messageDiv.style.color = 'red';
-      }
-    });
-
-    // Image preview functionality
-    document.getElementById('img').addEventListener('change', function() {
-      const file = this.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          document.getElementById('img-preview').src = e.target.result;
-          document.getElementById('img-preview-container').style.display = 'block';
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-  </script>
+  <div id="root"></div> <!-- React will inject the app here -->
 </body>
 </html>
